GNOME Bugzilla – Bug 138830
totem crashes when /dev/dsp busy (arts)
Last modified: 2007-04-08 12:20:01 UTC
1. play a song with xmms 2. start playing a movie in totem 3. segfault Program received signal SIGSEGV, Segmentation fault.
+ Trace 45611
Thread NaN (LWP 3323)
This is a bug in ARTS: http://bugs.kde.org/show_bug.cgi?id=62603
*** Bug 140173 has been marked as a duplicate of this bug. ***
*** Bug 142822 has been marked as a duplicate of this bug. ***
*** Bug 144178 has been marked as a duplicate of this bug. ***
*** Bug 144161 has been marked as a duplicate of this bug. ***
*** Bug 145622 has been marked as a duplicate of this bug. ***
*** Bug 145786 has been marked as a duplicate of this bug. ***
*** Bug 145924 has been marked as a duplicate of this bug. ***
*** Bug 146093 has been marked as a duplicate of this bug. ***
*** Bug 146290 has been marked as a duplicate of this bug. ***
*** Bug 146300 has been marked as a duplicate of this bug. ***
*** Bug 146368 has been marked as a duplicate of this bug. ***
*** Bug 146408 has been marked as a duplicate of this bug. ***
*** Bug 146409 has been marked as a duplicate of this bug. ***
*** Bug 146473 has been marked as a duplicate of this bug. ***
*** Bug 146488 has been marked as a duplicate of this bug. ***
*** Bug 146700 has been marked as a duplicate of this bug. ***
*** Bug 146728 has been marked as a duplicate of this bug. ***
*** Bug 146733 has been marked as a duplicate of this bug. ***
*** Bug 146775 has been marked as a duplicate of this bug. ***
*** Bug 146947 has been marked as a duplicate of this bug. ***
*** Bug 146943 has been marked as a duplicate of this bug. ***
*** Bug 146934 has been marked as a duplicate of this bug. ***
*** Bug 146922 has been marked as a duplicate of this bug. ***
*** Bug 146909 has been marked as a duplicate of this bug. ***
*** Bug 147111 has been marked as a duplicate of this bug. ***
*** Bug 147171 has been marked as a duplicate of this bug. ***
*** Bug 147219 has been marked as a duplicate of this bug. ***
*** Bug 147135 has been marked as a duplicate of this bug. ***
*** Bug 146352 has been marked as a duplicate of this bug. ***
Oh good grief, I wish I hadn't been subscribed to this bug. We badly need a workaround for this issue. Perhaps the totem README should include a note telling packagers NOT to package the arts xine plugin until this issue is fixed...
A work-around has been added to xine-lib CVS.
*** Bug 147409 has been marked as a duplicate of this bug. ***
*** Bug 147538 has been marked as a duplicate of this bug. ***
*** Bug 147624 has been marked as a duplicate of this bug. ***
*** Bug 147885 has been marked as a duplicate of this bug. ***
*** Bug 148384 has been marked as a duplicate of this bug. ***
*** Bug 148393 has been marked as a duplicate of this bug. ***
*** Bug 148548 has been marked as a duplicate of this bug. ***
*** Bug 148503 has been marked as a duplicate of this bug. ***
*** Bug 148447 has been marked as a duplicate of this bug. ***
*** Bug 148768 has been marked as a duplicate of this bug. ***
*** Bug 148968 has been marked as a duplicate of this bug. ***
*** Bug 149009 has been marked as a duplicate of this bug. ***
*** Bug 149014 has been marked as a duplicate of this bug. ***
*** Bug 148934 has been marked as a duplicate of this bug. ***
*** Bug 149032 has been marked as a duplicate of this bug. ***
*** Bug 150992 has been marked as a duplicate of this bug. ***
*** Bug 150970 has been marked as a duplicate of this bug. ***
*** Bug 150677 has been marked as a duplicate of this bug. ***
*** Bug 150675 has been marked as a duplicate of this bug. ***
*** Bug 150319 has been marked as a duplicate of this bug. ***
*** Bug 150078 has been marked as a duplicate of this bug. ***
*** Bug 149363 has been marked as a duplicate of this bug. ***
*** Bug 149690 has been marked as a duplicate of this bug. ***
*** Bug 149352 has been marked as a duplicate of this bug. ***
*** Bug 151290 has been marked as a duplicate of this bug. ***
*** Bug 151478 has been marked as a duplicate of this bug. ***
*** Bug 151947 has been marked as a duplicate of this bug. ***
*** Bug 152137 has been marked as a duplicate of this bug. ***
*** Bug 152100 has been marked as a duplicate of this bug. ***
*** Bug 152075 has been marked as a duplicate of this bug. ***
*** Bug 152332 has been marked as a duplicate of this bug. ***
*** Bug 152460 has been marked as a duplicate of this bug. ***
*** Bug 152430 has been marked as a duplicate of this bug. ***
*** Bug 152449 has been marked as a duplicate of this bug. ***
*** Bug 152563 has been marked as a duplicate of this bug. ***
*** Bug 152646 has been marked as a duplicate of this bug. ***
*** Bug 152685 has been marked as a duplicate of this bug. ***
*** Bug 152763 has been marked as a duplicate of this bug. ***
*** Bug 153160 has been marked as a duplicate of this bug. ***
*** Bug 153165 has been marked as a duplicate of this bug. ***
*** Bug 153061 has been marked as a duplicate of this bug. ***
*** Bug 153188 has been marked as a duplicate of this bug. ***
*** Bug 153489 has been marked as a duplicate of this bug. ***
*** Bug 153616 has been marked as a duplicate of this bug. ***
*** Bug 153699 has been marked as a duplicate of this bug. ***
*** Bug 153703 has been marked as a duplicate of this bug. ***
*** Bug 153754 has been marked as a duplicate of this bug. ***
*** Bug 154422 has been marked as a duplicate of this bug. ***
*** Bug 154522 has been marked as a duplicate of this bug. ***
*** Bug 155562 has been marked as a duplicate of this bug. ***
*** Bug 155418 has been marked as a duplicate of this bug. ***
*** Bug 156240 has been marked as a duplicate of this bug. ***
*** Bug 156747 has been marked as a duplicate of this bug. ***
*** Bug 156726 has been marked as a duplicate of this bug. ***
*** Bug 157022 has been marked as a duplicate of this bug. ***
*** Bug 157024 has been marked as a duplicate of this bug. ***
*** Bug 157027 has been marked as a duplicate of this bug. ***
*** Bug 157029 has been marked as a duplicate of this bug. ***
*** Bug 157220 has been marked as a duplicate of this bug. ***
*** Bug 157875 has been marked as a duplicate of this bug. ***
*** Bug 158339 has been marked as a duplicate of this bug. ***
*** Bug 158430 has been marked as a duplicate of this bug. ***
*** Bug 158565 has been marked as a duplicate of this bug. ***
*** Bug 158582 has been marked as a duplicate of this bug. ***
*** Bug 159696 has been marked as a duplicate of this bug. ***
*** Bug 160561 has been marked as a duplicate of this bug. ***
*** Bug 160743 has been marked as a duplicate of this bug. ***
*** Bug 160965 has been marked as a duplicate of this bug. ***
*** Bug 161051 has been marked as a duplicate of this bug. ***
*** Bug 161336 has been marked as a duplicate of this bug. ***
*** Bug 161533 has been marked as a duplicate of this bug. ***
*** Bug 161637 has been marked as a duplicate of this bug. ***
*** Bug 161870 has been marked as a duplicate of this bug. ***
*** Bug 162259 has been marked as a duplicate of this bug. ***
*** Bug 162426 has been marked as a duplicate of this bug. ***
*** Bug 162437 has been marked as a duplicate of this bug. ***
*** Bug 162725 has been marked as a duplicate of this bug. ***
*** Bug 163020 has been marked as a duplicate of this bug. ***
*** Bug 164183 has been marked as a duplicate of this bug. ***
*** Bug 164693 has been marked as a duplicate of this bug. ***
*** Bug 165076 has been marked as a duplicate of this bug. ***
*** Bug 165115 has been marked as a duplicate of this bug. ***
*** Bug 166383 has been marked as a duplicate of this bug. ***
*** Bug 166488 has been marked as a duplicate of this bug. ***
*** Bug 168005 has been marked as a duplicate of this bug. ***
*** Bug 168354 has been marked as a duplicate of this bug. ***
*** Bug 168677 has been marked as a duplicate of this bug. ***
*** Bug 170089 has been marked as a duplicate of this bug. ***
*** Bug 172010 has been marked as a duplicate of this bug. ***
*** Bug 172130 has been marked as a duplicate of this bug. ***
*** Bug 172317 has been marked as a duplicate of this bug. ***
*** Bug 172945 has been marked as a duplicate of this bug. ***
*** Bug 300004 has been marked as a duplicate of this bug. ***
*** Bug 300201 has been marked as a duplicate of this bug. ***
*** Bug 301588 has been marked as a duplicate of this bug. ***
*** Bug 301673 has been marked as a duplicate of this bug. ***
*** Bug 303030 has been marked as a duplicate of this bug. ***
*** Bug 303080 has been marked as a duplicate of this bug. ***
*** Bug 303077 has been marked as a duplicate of this bug. ***
*** Bug 303963 has been marked as a duplicate of this bug. ***
*** Bug 305643 has been marked as a duplicate of this bug. ***
*** Bug 143086 has been marked as a duplicate of this bug. ***
*** Bug 306805 has been marked as a duplicate of this bug. ***
*** Bug 313315 has been marked as a duplicate of this bug. ***
*** Bug 315171 has been marked as a duplicate of this bug. ***
*** Bug 315633 has been marked as a duplicate of this bug. ***
*** Bug 315793 has been marked as a duplicate of this bug. ***
*** Bug 317133 has been marked as a duplicate of this bug. ***
*** Bug 317480 has been marked as a duplicate of this bug. ***
*** Bug 317286 has been marked as a duplicate of this bug. ***
*** Bug 317655 has been marked as a duplicate of this bug. ***
*** Bug 317394 has been marked as a duplicate of this bug. ***
*** Bug 316769 has been marked as a duplicate of this bug. ***
*** Bug 317675 has been marked as a duplicate of this bug. ***
*** Bug 317923 has been marked as a duplicate of this bug. ***
*** Bug 320675 has been marked as a duplicate of this bug. ***
*** Bug 321442 has been marked as a duplicate of this bug. ***
*** Bug 321957 has been marked as a duplicate of this bug. ***
*** Bug 322152 has been marked as a duplicate of this bug. ***
*** Bug 323162 has been marked as a duplicate of this bug. ***
*** Bug 327137 has been marked as a duplicate of this bug. ***
*** Bug 327928 has been marked as a duplicate of this bug. ***
*** Bug 332480 has been marked as a duplicate of this bug. ***
*** Bug 343531 has been marked as a duplicate of this bug. ***
*** Bug 423209 has been marked as a duplicate of this bug. ***