- add a work-around for aRts bug:   http://bugs.kde.org/show_bug.cgi?id=62603   and filed against Totem bug:   http://bugzilla.gnome.org/show_bug.cgi?id=138830

CVS patchset: 6787
CVS date: 2004/07/11 11:23:48